examples/good/10-01-runtime-error-after-return.dog

yeet 5;
return 5;
yeet 5;
return (2 / 0);