examples/bad/07-01-lvalue-reference.dog
int fun(int& t) {
    return 5;
}

fun(5);